--- a/common/views/index.html
+++ b/common/views/index.html
@@ -7,43 +7,63 @@ and open the template in the editor.
 <html>
 
 <head>
-    <title>TODO supply a title</title>
+    <title>Evaluación Alumnado</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../../modules/jquery/jquery-2.2.0.js"></script>
     <script src="../../modules/jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="../../modules/jquery-mobile/jqmobile.min.css">
+    <link rel="stylesheet" href="../../modules/jquery-mobile/blackandblue.min.css">
     <link rel="stylesheet" href="../../modules/jquery-mobile/jquery.mobile-1.4.5.css">
 </head>
 
-<body>
-    <div data-role="page" data-theme="c">
+<body class="ui-mobile-viewport ui-overlay-a">
+    <div data-role="page" id="login" data-theme="d">
         <div data-role="header" data-position="inline">
-            <h1>Evaluación Alumnos</h1>
-            <a href="index.html" data-icon="home" class="ui-btn-active">Home</a>
+            <h1>Evaluación Alumnado</h1>
         </div>
-        <div data-role="content" data-theme="c">
+        <div data-role="content" class="ui-content" data-theme="d">
 
-            <form action="#">
-                <div data-role="fieldcontain">
-                    <label for="user">Username</label>
-                    <input type="text" name="user" id="user" value="" placeholder="Input your username" />
+            <form id="formLogin" action="#list_alumns">
+                <div class="ui-fieldcontain" data-role="fieldcontain">
+                    <input type="text" name="user" id="user" value="" placeholder="Nombre de usuario" class="ui-input-text" data-theme="a" data-clear-btn="true" />
                 </div>
+                <div class="ui-fieldcontain" data-role="fieldcontain">
+                    <input type="password" name="password" id="password" placeholder="Contraseña" class="ui-input-password" data-theme="a" data-clear-btn="true">
+                </div>
+                <input type="submit" data-theme="d" value="login">
+            </form>
+        </div>
+        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup" s>
+            <h1></h1>
+        </div>
+    </div>
+    <div data-role="page" id="list_alumns" data-theme="d">
+        <div data-role="header" data-position="inline">
+            <h1>Evaluación Alumnado</h1>
+        </div>
+        <div data-role="content" class="ui-content" data-theme="d">
 
-                <div data-role="fieldcontain">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
-                    </textarea>
+            <form action="">
+                <div class="ui-fieldcontain" data-role="fieldcontain">
+                    <input type="text" name="user" id="user" value="" placeholder="Nombre de usuario" class="ui-input-text" data-theme="a" data-clear-btn="true" />
+                </div>
+                <div class="ui-fieldcontain" data-role="fieldcontain">
+                    <input type="password" name="password" id="password" placeholder="Contraseña" class="ui-input-password" data-theme="a" data-clear-btn="true">
                 </div>
                 <div class="ui-body">
                     <fieldset class="ui-grid">
                         <div class="ui-block">
                             <div class="ui-block">
-                                <button type="submit" data-theme="c">Login</button>
                             </div>
+                        </div>
                     </fieldset>
-                    </div>
+                </div>
             </form>
+        </div>
+        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup" s>
+            <h1></h1>
+        </div>
+    </div>
 </body>
 
 </html>
