started with list_alumns

--- a/common/views/index.html
+++ b/common/views/index.html
@@ -23,21 +23,21 @@ and open the template in the editor.
         </div>
         <div data-role="content" class="ui-content" data-theme="d">
 
-            <form id="formLogin" action="#list_alumns">
+            <form id="formLogin" action="#listalumns">
                 <div class="ui-fieldcontain" data-role="fieldcontain">
                     <input type="text" name="user" id="user" value="" placeholder="Nombre de usuario" class="ui-input-text" data-theme="a" data-clear-btn="true" />
                 </div>
                 <div class="ui-fieldcontain" data-role="fieldcontain">
                     <input type="password" name="password" id="password" placeholder="Contraseña" class="ui-input-password" data-theme="a" data-clear-btn="true">
                 </div>
-                <input type="submit" data-theme="d" value="login">
+                <input type="submit" data-theme="d" value="Login">
             </form>
         </div>
-        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup" s>
+        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup">
             <h1></h1>
         </div>
     </div>
-    <div data-role="page" id="list_alumns" data-theme="d">
+    <div data-role="page" id="listalumns" data-theme="d">
         <div data-role="header" data-position="inline">
             <h1>Evaluación Alumnado</h1>
         </div>
@@ -60,7 +60,7 @@ and open the template in the editor.
                 </div>
             </form>
         </div>
-        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup" s>
+        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup">
             <h1></h1>
         </div>
     </div>
