--- a/common/views/index.html
+++ b/common/views/index.html
@@ -6,64 +6,55 @@ and open the template in the editor.
 -->
 <html>
 
-<head>
-    <title>Evaluación Alumnado</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../../modules/jquery/jquery-2.2.0.js"></script>
-    <script src="../../modules/jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="../../modules/jquery-mobile/blackandblue.min.css">
-    <link rel="stylesheet" href="../../modules/jquery-mobile/jquery.mobile-1.4.5.css">
-</head>
+    <head>
+        <title>Login</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="../../modules/jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
+        <link rel="stylesheet" href="../../modules/jquery-mobile/blackandblue.min.css">
+        <link rel="stylesheet" href="../../modules/jquery-mobile/jquery.mobile-1.4.5.css">
+        <link rel="stylesheet" href="../../css/style.css">
 
-<body class="ui-mobile-viewport ui-overlay-a">
-    <div data-role="page" id="login" data-theme="d">
-        <div data-role="header" data-position="inline">
-            <h1>Evaluación Alumnado</h1>
-        </div>
-        <div data-role="content" class="ui-content" data-theme="d">
+    </head>
 
-            <form id="formLogin" action="#listalumns">
-                <div class="ui-fieldcontain" data-role="fieldcontain">
-                    <input type="text" name="user" id="user" value="" placeholder="Nombre de usuario" class="ui-input-text" data-theme="a" data-clear-btn="true" />
-                </div>
-                <div class="ui-fieldcontain" data-role="fieldcontain">
-                    <input type="password" name="password" id="password" placeholder="Contraseña" class="ui-input-password" data-theme="a" data-clear-btn="true">
-                </div>
-                <input type="submit" data-theme="d" value="Login">
-            </form>
-        </div>
-        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup">
-            <h1></h1>
-        </div>
-    </div>
-    <div data-role="page" id="listalumns" data-theme="d">
-        <div data-role="header" data-position="inline">
-            <h1>Evaluación Alumnado</h1>
-        </div>
-        <div data-role="content" class="ui-content" data-theme="d">
+    <body class="ui-mobile-viewport ui-overlay-a">
 
-            <form action="">
-                <div class="ui-fieldcontain" data-role="fieldcontain">
-                    <input type="text" name="user" id="user" value="" placeholder="Nombre de usuario" class="ui-input-text" data-theme="a" data-clear-btn="true" />
-                </div>
-                <div class="ui-fieldcontain" data-role="fieldcontain">
-                    <input type="password" name="password" id="password" placeholder="Contraseña" class="ui-input-password" data-theme="a" data-clear-btn="true">
-                </div>
-                <div class="ui-body">
-                    <fieldset class="ui-grid">
-                        <div class="ui-block">
-                            <div class="ui-block">
-                            </div>
+        <!--
+            
+            LOGIN PAGE
+            
+        -->
+
+        <div data-role="page" id="login" data-theme="d">
+            <div data-role="header" data-position="inline">
+                <h1>Evaluación Alumnado</h1>
+            </div>
+            <div data-role="content" class="ui-content" data-theme="d">
+
+                <form id="formLogin" action="#list" method="post">
+                    <div  data-role="fieldcontain">
+                        <input type="text" name="user" id="user" value="" placeholder="Nombre de usuario" class="ui-input-text" data-theme="a" data-clear-btn="true" />
+                    </div>
+                    <div data-role="fieldcontain">
+                        <input type="password" name="password" id="password" placeholder="Contraseña"  data-theme="a" data-clear-btn="true">
+                    </div>
+
+                    <div class="ui-grid-b">
+                        <div class="ui-block-a"></div>
+                        <div class="ui-block-b">
+                            <button type="submit" id="btn-login" data-theme="d">Submit</button>
                         </div>
-                    </fieldset>
-                </div>
-            </form>
+                        <div class="ui-block-c"></div>
+                    </div>
+
+                </form>
+            </div>
+            <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup">
+                <h1>Login</h1>
+            </div>
         </div>
-        <div data-role="footer" data-position="fixed" class="ui-footer ui-bar-inherit ui-footer-fixed slideup">
-            <h1></h1>
-        </div>
-    </div>
-</body>
+        <script type="text/javascript" src="../js/index.js"></script>
+    </body>
 
 </html>
