Añadida funcionalidad con el servidor en el login. Validación del formulario con jquery-validate y uso de jquery ajax para la validación contra la base de datos. Subido a hostinger.es en http://jquerymobile.esy.es

--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,7 @@ and open the template in the editor.
 .ui-li-static.ui-collapsible > .ui-collapsible-content {
     border-bottom-width: 0;
 }
+
+.error{
+    color: red;
+}
